--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,9 @@ h2 {
     width: 200px;
     height: 200px;
     margin-top: 80px;
-    margin-left: 320px;
+    margin-left: 390px;
     margin-bottom: 300px;
+    border-radius: 5px;
 }
 
 #matterhorn {
@@ -35,6 +36,7 @@ h2 {
     margin-top: 80px;
     margin-left: 60px;
     margin-bottom: 300px;
+    border-radius: 5px;
 }
 
 #yellowstone {
@@ -43,4 +45,5 @@ h2 {
     margin-top: 80px;
     margin-left: 60px;
     margin-bottom: 300px;
+    border-radius: 5px;
 }
