--- a/views/impressum.html
+++ b/views/impressum.html
@@ -4,16 +4,46 @@
     <meta charset="UTF-8">
     <title>Impressum</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+<script src="../js/main.js"></script>
 
-<img alt="logo" src="images/Logo.svg" id="logo">
-<h1>Impressum</h1>
-<p>Flora Gashi<br>Austellungsstrasse<br>Technische Berufsschule Zürich<br>Email: flora.gashi@edu.tbz.ch</p>
-<p><br>Quelle der verwendeten Bilder: </p>
+<img alt="logo" src="../images/Logo.svg" id="logo">
+<h2 class="animate__animated animate__bounce"><strong>Travel Blog</strong></h2>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="../index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</nav>
+
+<img alt="banner" src="../images/welcome-banner.jpg" id="welcome-banner">
+
+<div class="impressum-infos">
+    <h1>Impressum</h1>
+    <p>Flora Gashi<br>Austellungsstrasse<br>Technische Berufsschule Zürich<br>Email: flora.gashi@edu.tbz.ch</p>
+    <p><br>Quelle der verwendeten Bilder: https://pixabay.com/de/images/search/travel/</p>
+</div>
+
+<div class="card text-center">
+    <div class="card-header">
+        Featured
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer text-muted">
+        By Flora Gashi
+    </div>
+</div>
+
 </body>
 </html>
